Fix: application properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-spring.jpa.hibernate.ddl-auto=update
-server.contextPath=index
+server.port=8082
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MariaDBDialect
 spring.datasource.url=jdbc:mariadb://localhost:3306/inmobiliaria
 spring.datasource.username=root
